--- a/index.css
+++ b/index.css
@@ -2,12 +2,27 @@
 
 body
 {
-    margin: 0;
+    margin: 20px;
+}
+
+table
+{
+    border-collapse: collapse;
 }
 
 th
 {
     text-align: left;
+}
+
+td
+{
+    border: 1px solid rgba(112, 128, 144, 0.4);
+}
+
+thead tr
+{
+    border: none;
 }
 
 .bookmark-name-header
